# SAP_LLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTUAL_PRODUCTION_READINESS_ASSESSMENT.md  ADVANCED_CAPABILITIES_IMPLEMENTATION.md  ADVANCED_FEATURES.md  BENCHMARKING_COMPLETE.md  CHANGELOG.md  COMPLETION_EVIDENCE.md  COMPREHENSIVE_PRODUCTION_AUDIT_REPORT.md  CONTRIBUTING.md  CORPUS_BUILDING_GUIDE.md  CORS_SECURITY_VERIFICATION_REPORT.md  COVERAGE_BASELINE_REPORT.md  CRITICAL_TODOS_FOR_CLAUDE_CODE.md  DATA_COLLECTION_STATUS_REPORT.md  DEPENDENCY_VERSIONS.md  DEPLOYMENT.md  Dockerfile  ENTERPRISE_AUDIT_REPORT.md  ENTERPRISE_COMPLIANCE_VALIDATION.md  ENTERPRISE_COMPLIANCE_VERIFICATION.md  ENTERPRISE_UPGRADE_PLAN.md  ENTERPRISE_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_QUALITY_REPORT.md  IMPLEMENTATION_VALIDATION_REPORT.md  INFRASTRUCTURE_SCRIPTS_SUMMARY.md  LANGUAGE_DECODER_IMPLEMENTATION.md  LEARNING_ENHANCEMENT_SUMMARY.md  MULTIMODAL_FUSION_IMPLEMENTATION.md  ORCHESTRATOR_PMG_INTEGRATION_SUMMARY.md  PERFORMANCE_REPORT.md  PHASE_4_6_IMPLEMENTATION.md  PLAN_01.md  PLAN_02.md  PMG_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_100_CERTIFICATE.md  PRODUCTION_READINESS_100_REPORT.md  (+39 more)
.github/: CICD_PIPELINE_GUIDE.md  WORKFLOW_QUICK_REFERENCE.md  codeql-config.yml  dependabot.yml
.github/workflows/: benchmarks.yml  cd.yml  ci-cd.yaml  ci.yml  dependency-scan.yml  integration-tests-gpu.yml  release.yml  security.yml  test.yml
benchmarks/: README.md  requirements.txt
benchmarks/baseline/: README.md
benchmarks/results/: combined_20251119_154000.json  compliance_report.json  latency_20251119_153914.json
benchmarks/scripts/: check_regressions.py  generate_report.py  generate_test_data.py  monitor_resources.py  run_accuracy_benchmark.py  run_all_benchmarks.py  run_latency_benchmark.py  run_load_test.py  run_throughput_benchmark.py  validate_enterprise_compliance.py
config/: correction.yaml  models.yaml
config/shwl/: deployment_config.json  healing_rules.json
configs/: alerting_rules.yml  default_config.yaml  document_types.yaml  web_search_config.example.json
data/field_mappings/: goods_receipt_for_po.json  goods_receipt_return.json  incoterms.json  payment_terms.json  purchase_order_consignment.json  purchase_order_service.json  purchase_order_standard.json  purchase_order_subcontracting.json  service_entry_sheet_blanket.json  service_entry_sheet_for_po.json  supplier_invoice_credit_memo.json  supplier_invoice_down_payment.json  supplier_invoice_standard.json
deployments/: deploy.sh
deployments/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  mongo-deployment.yaml  namespace.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml.template  service.yaml
deployments/monitoring/: grafana-dashboards.json
docs/: ACCEPTANCE_CRITERIA_VERIFICATION.md  ADVANCED_WEB_SEARCH_IMPLEMENTATION_REPORT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BENCHMARK_EXECUTION_PLAN.md  CODEBASE_ANALYSIS_REPORT.md  COMPLETE_COMPLIANCE_CHECKLIST.md  COMPREHENSIVE_ARCHITECTURE.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_CODEBASE_AUDIT_2025.md  CONTINUOUS_LEARNING.md  CRITICAL_TODOS_COMPLETION_REPORT.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  DETAILED_ISSUE_VERIFICATION.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  DR_MONITORING_SUMMARY.md  ENHANCEMENTS.md  ENTERPRISE_COMPLIANCE_REPORT.md  ENTERPRISE_GAP_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FIELD_MAPPING_GUIDE.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING.md  LEARNING_SYSTEM.md  MONITORING_GUIDE.md  OPERATIONS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_CERTIFICATION.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_FIXES_IMPLEMENTED.md  QUICK_START_INFRASTRUCTURE.md  REASONING_ENGINE_TRAINING.md  REQUIREMENTS_VERIFICATION.md  SECURITY_COMPLIANCE.md  SELF_CORRECTION.md  SHWL_DEPLOYMENT_GUIDE.md  (+14 more)
docs/runbooks/: api-endpoint-down.md  database-connection-failure.md  disk-space-low.md  gpu-utilization-low.md  high-error-rate.md  high-latency.md  high-memory.md  low-throughput.md  model-inference-failure.md  sla-violation.md
examples/: README.md  continuous_learning_demo.py  federated_learning_example.py  language_decoder_example.py  learning_system_example.py  reasoning_engine_inference.py  shwl_deployment_example.py  test_type_identifier.py  verify_type_identifier.py  web_search_example.py
examples/api/: README.md  example_batch_processing.py  example_check_status.py  example_upload_document.py  example_websocket_client.py
examples/apop/: run_workflow.py
examples/multimodal/: README.md  multimodal_processing_example.py
examples/optimization/: quantize_model.py
examples/training/: train_with_rlhf.py
helm/: HELM_DEPLOYMENT_GUIDE.md
helm/sap-llm/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-production.yaml  values-staging.yaml  values.yaml
models/language_decoder/: README.md
sap_llm/: __init__.py  config.py
sap_llm/advanced/: __init__.py  explainability.py  (+3 more)
scripts/: README.md  backup.sh  build_knowledge_base.py  download_models.py  evaluate_vision_encoder.py  health_check.py  init_databases.py  populate_pmg_production.py  pre_production_validation.sh  quickstart_vision_encoder.sh  restore.sh  run_benchmarks.py  run_data_collection.py  run_performance_benchmarks.py  run_tests.sh  setup_infrastructure.sh  test_web_search_integration.py  train_reasoning_engine.py  train_vision_encoder.py  verify_continuous_learning.py  verify_dependencies.py  web_search_performance_report.py
terraform/: main.tf
tests/: __init__.py  comprehensive_test_suite.py  comprehensive_validation_suite.py  conftest.py  test_api.py  test_apop_comprehensive.py  test_config.py  test_config_advanced.py  test_integration.py  test_logger.py  test_multimodal.py  test_pmg_comprehensive.py  test_shwl_comprehensive.py  test_stages.py  test_stages_comprehensive.py  test_utils.py  test_web_search.py  test_web_search_integration.py  ultra_enterprise_test_suite.py
(+258 files in other folders)
